--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,7 @@
     <string name="label_weather_forecast">Weather Forecast</string>
     <string name="label_basic_practices">Basic Practices</string>
     <string name="label_financial_summary">Financial Summary</string>
-    <string name="title_activity_crop_inventory_seeds_manager">CropInventorySeedsManagerActivity
-    </string>
-
+    <string name="title_activity_crop_inventory_seeds_manager">Seeds Manager</string>
     <string name="field_name">Field Name :</string>
     <string name="save">SAVE</string>
     <string name="soil_category">Soil Category :</string>
@@ -23,5 +21,23 @@
     <string name="total_area">Total Area :</string>
     <string name="watercourse">Watercourse :</string>
     <string name="soil_type">Soil Type :</string>
+    <string name="label_inventory_list">Inventory List</string>
+
+    <string-array name="crop_seeds_usage_units">
+        <item>Select unit</item>
+        <item>g</item>
+        <item>Kg</item>
+        <item>cwt</item>
+        <item>tonne</item>
+    </string-array>
+    <string-array name="cropInventories">
+        <item>Select Inventory</item>
+        <item>All Records</item>
+
+        <item>Fertilizers</item>
+        <item>Seed</item>
+
+        <item>Spray</item>
+    </string-array>
 
 </resources>
