--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -254,13 +254,15 @@
     <string name="activity_crop_field_manager_title">Field Manager</string>
     <string name="crop_not_entered">The cost has not been entered</string>
     <string name="agronomist_not_entered">The Agronomist has not been entered</string>
-    <string name="title_activity_crop_cultivate_list">CropCultivateListActivity</string>
+    <string name="title_activity_crop_cultivate_list">Cultivate List</string>
     <string name="equipment_not_entered">Equipment used not entered</string>
     <string name="spray_name_not_entered">Spray Name has not been entered</string>
     <string name="title_activity_crop_spraying_list">Spraying List</string>
     <string name="title_activity_crop_fertilizer_application_list">
-        CropFertilizerApplicationListActivity
+        Fertilizer Application List
     </string>
+    <string name="application_method_not_entered">Application Method not selected</string>
+    <string name="fertilizer_form_not_selected">Fertilizer Form not selected</string>
 
 
 </resources>
