--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -252,6 +252,10 @@
     <string name="batch">Batch #</string>
     <string name="btn_update_label">Update</string>
     <string name="activity_crop_field_manager_title">Field Manager</string>
+    <string name="machine_name_not_entered_message">You must enter the Machine Name</string>
+    <string name="purchaed_from_not_entered_message">You Must Enter where you Purchased From</string>
+    <string name="purchase_price_not_entered_message">You Must Enter the Purchase Price</string>
+    <string name="category_not_selected">You must select Category</string>
 
 
 </resources>
