--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -263,6 +263,7 @@
     </string>
     <string name="application_method_not_entered">Application Method not selected</string>
     <string name="fertilizer_form_not_selected">Fertilizer Form not selected</string>
+    <string name="operation_not_selected">Operation has not been selected</string>
 
 
 </resources>
