--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -187,6 +187,27 @@
         <item>Sweet Potatoes</item>
     </string-array>
 
+    <string-array name="crop_machine_category">
+        <item>Select</item>
+        <item>Plow</item>
+    <item>Cultivator</item>
+    <item>Roller</item>
+    <item>Tractor</item>
+    <item>Trowel</item>
+    <item>Seed Drill</item>
+    <item>Manure Spreader</item>
+        <item>Irrigation Pump</item>
+        <item>Sprinkler System</item>
+        <item>Grain dryer</item>
+        <item>Buckrake</item>
+        <item>Harvestor</item>
+        <item>Rake</item>
+        <item>Wagon</item>
+        <item>Baler</item>
+        <item>Engine</item>
+        <item>Others</item>
+</string-array>
+
     <string name="title_activity_crop_fields_list">Fields List</string>
     <string name="field_name">Field Name</string>
     <string name="soil_category">Soil Category</string>
@@ -268,6 +289,9 @@
     <string name="application_method_not_entered">Application Method not selected</string>
     <string name="fertilizer_form_not_selected">Fertilizer Form not selected</string>
     <string name="operation_not_selected">Operation has not been selected</string>
+    <string name="field_name_not_entered_message">You must enter a field name</string>
+    <string name="total_area_not_entered_message">You must enter the total area</string>
+    <string name="units_not_selected">You must select units</string>
 
 
 </resources>
