--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -264,6 +264,8 @@
     <string name="application_method_not_entered">Application Method not selected</string>
     <string name="fertilizer_form_not_selected">Fertilizer Form not selected</string>
     <string name="operation_not_selected">Operation has not been selected</string>
+    <string name="activity_soil_analysis_list_label">Soil Analysis List</string>
+    <string name="activity_soil_analysis_manager_label">Soil Analysis Manager</string>
 
 
 </resources>
