--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -297,6 +297,7 @@
     <string name="total_area_not_entered_message">You must enter the total area</string>
     <string name="units_not_selected">You must select units</string>
     <string name="activity_spraying_manager_label">Spraying Manager</string>
+    <string name="activity_fertilizer_application_manager_label">Fertilizer Application Manager</string>
 
 
 </resources>
