Added customer,employee and product cards

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -399,7 +399,21 @@
     <string name="phone_number_not_entered">Phone Number is not entered</string>
     <string name="shipping_address_not_complete">Shipping address not complete</string>
     <string name="billing_address_not_complete">Billing Address Not Complete</string>
-
+    <string name="select_invoice">Select Invoice</string>
+    <string name="payment_date">Payment Date</string>
+    <string name="payment_number">Payment #</string>
+    <string name="amount">Amount</string>
+    <string name="payment_mode">Payment Mode</string>
+    <string name="reference_number">Reference Number</string>
+    <string name="amount_received">Amount Received</string>
+    <string name="save_send"><![CDATA[Save & Send]]></string>
+    <string name="title_not_entered_message">You must enter the Title</string>
+    <string name="last_name_not_entered_message">You must enter your Last Name</string>
+    <string name="first_name_not_entered">You must enter your First Name</string>
+    <string name="gender_not_selected">You must select Gender</string>
+    <string name="employment_status_not_selected">You must select Employment Status</string>
+    <string name="per_not_selected">You must select pay rate</string>
+    <string name="pay_type_not_selected">You must select the Pay Type</string>
 
 
 </resources>
