--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="units">Units</string>
 
 
-    <string name="label_inventory_list">Inventory List</string>
+    <string name="label_inventory_list">Inventory </string>
     <string name="date_not_entered_message">The date has not been entered</string>
     <string name="seed_name_not_entered_message">You must enter a seed Name</string>
     <string name="quantity_not_entered_message">You must enter a quantity</string>
@@ -605,7 +605,7 @@
         <item>No</item>
     </string-array>
 
-    <string name="title_activity_crop_fields_list">Fields List</string>
+    <string name="title_activity_crop_fields_list">Fields </string>
     <string name="field_name">Field Name</string>
     <string name="soil_category">Soil Category</string>
     <string name="soil_type">Soil Type</string>
@@ -663,7 +663,7 @@
     <string name="operator_not_entered">Operator has not been entered</string>
     <string name="crop_not_selected">Crop has not been selected</string>
     <string name="field_not_selected">Field has not been Selected</string>
-    <string name="activity_crops_list">Crops List</string>
+    <string name="activity_crops_list">Crops </string>
     <string name="activity_crop_manager">Crop Manager</string>
     <string name="usage_unit">Usage Unit</string>
     <string name="tgw">TGW</string>
@@ -676,25 +676,25 @@
     <string name="category_not_selected">You must select Category</string>
     <string name="crop_not_entered">The cost has not been entered</string>
     <string name="agronomist_not_entered">The Agronomist has not been entered</string>
-    <string name="title_activity_crop_cultivate_list">Cultivate List</string>
+    <string name="title_activity_crop_cultivate_list">Cultivate </string>
     <string name="equipment_not_entered">Equipment used not entered</string>
     <string name="spray_name_not_entered">Spray Name has not been entered</string>
-    <string name="title_activity_crop_spraying_list">Spraying List</string>
+    <string name="title_activity_crop_spraying_list">Spraying </string>
     <string name="title_activity_crop_fertilizer_application_list">
-        Fertilizer Application List
+        Fertilizer Application 
     </string>
     <string name="application_method_not_entered">Application Method not selected</string>
     <string name="fertilizer_form_not_selected">Fertilizer Form not selected</string>
     <string name="operation_not_selected">Operation has not been selected</string>
 
-    <string name="activity_soil_analysis_list_label">Soil Analysis List</string>
+    <string name="activity_soil_analysis_list_label">Soil Analysis </string>
     <string name="activity_soil_analysis_manager_label">Soil Analysis Manager</string>
 
     <string name="field_name_not_entered_message">You must enter a field name</string>
     <string name="total_area_not_entered_message">You must enter the total area</string>
     <string name="units_not_selected">You must select units</string>
 
-    <string name="machines_list">Machines List</string>
+    <string name="machines_list">Machines </string>
     <string name="activity_crop_machine_manager">Machine Manager</string>
 
     <string name="activity_spraying_manager_label">Spraying Manager</string>
@@ -757,20 +757,20 @@
     <string name="estimate_date">Estimate Date</string>
     <string name="expiry_date">Expiry Date</string>
 
-    <string name="title_activity_crop_customers_list">Customers List</string>
+    <string name="title_activity_crop_customers_list">Customers </string>
     <string name="phone_number_not_entered">Phone Number is not entered</string>
     <string name="shipping_address_not_complete">Shipping address not complete</string>
     <string name="billing_address_not_complete">Billing Address Not Complete</string>
     <string name="invoice_address_not_complete">Invoice address complete</string>
     <string name="label_opening_quantity">Opening Quantity</string>
     <string name="label_opening_cost">Opening Cost</string>
-    <string name="title_activity_crop_products_list">Products List</string>
+    <string name="title_activity_crop_products_list">Products </string>
     <string name="name_not_entered">The name has not been entered</string>
     <string name="type_not_selected">The Type has not been entered</string>
     <string name="activity_crop_customer_manager_title">Customer Manager</string>
-    <string name="title_activity_crop_supplies_list">Suppliers List</string>
+    <string name="title_activity_crop_supplies_list">Suppliers </string>
     <string name="title_activity_crop_supplier_manager">Supplier Manager</string>
-    <string name="title_activity_crop_estimates_list">Estimates List</string>
+    <string name="title_activity_crop_estimates_list">Estimates </string>
     <string name="select_invoice">Select Invoice</string>
     <string name="payment_date">Payment Date</string>
     <string name="payment_number">Payment #</string>
@@ -822,7 +822,7 @@
     <string name="invoice_no_items_added">No Items added to the Invoice</string>
     <string name="customer_not_selected">Customer not selected</string>
     <string name="title_activity_crop_payment_manager">Payment Manager</string>
-    <string name="title_activity_crop_payments_list">Payments List</string>
+    <string name="title_activity_crop_payments_list">Payments </string>
     <string name="financial_manager_menu_item">Financial Manager</string>
     <string name="products_label">Products</string>
     <string name="payment_mode_not_entered">Mode not entered</string>
@@ -855,10 +855,14 @@
     <string name="shipping_method">Shipping Method</string>
     <string name="sales_order_number">Sales Order #</string>
     <string name="sales_order_no_items_added">No Items added to the sales Order</string>
-    <string name="title_activity_crop_sales_order_list">Sales Order List</string>
+    <string name="title_activity_crop_sales_order_list">Sales Order </string>
     <string name="title_activity_crop_sales_order_manager">Sales Order Manager</string>
     <string name="title_activity_crop_sales_order_preview">Sales Order Preview</string>
     <string name="label_soil_analysis">Soil Analysis</string>
+    <string name="ref_no">Ref #</string>
+    <string name="reference_number_not_entered">Reference Number Not Entered</string>
+    <string name="enter_hint">Enter...</string>
+    <string name="preview_invoice">Preview Invoice</string>
 
 
 </resources>
