Added purchase order manager, list, adapter and card

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -862,5 +862,11 @@
     <string name="crop_manager_menu_item">Crops</string>
     <string name="invetory_manager_menu_item">Invetory</string>
     <string name="contact_manager_menu_item">Contacts</string>
+    <string name="supplier">Supplier</string>
+    <string name="purchase_order_number">Purchase Order Number</string>
+    <string name="purchase_order_date">Purchase Date</string>
+    <string name="delivery_date_label">Delivery Date</string>
+    <string name="delivery_method">Delivery Method</string>
+    <string name="purchase_order_no_items_added">No Items added to the Purchase Order</string>
 
 </resources>
