--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -874,4 +874,5 @@
     <string name="order_number">Order Number</string>
     <string name="bill_date">Biil Date</string>
     <string name="terms">Terms</string>
+    <string name="title_activity_crop_roistep1">Step 1</string>
 </resources>
