--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -860,7 +860,7 @@
     <string name="product_manager">Product Manager</string>
     <string name="field_manager_menu_item">Fields</string>
     <string name="crop_manager_menu_item">Crops</string>
-    <string name="invetory_manager_menu_item">Invetory</string>
+    <string name="inventory_manager_menu_item">Inventory</string>
     <string name="contact_manager_menu_item">Contacts</string>
     <string name="title_activity_crop_verify_phone_number">Verify Account</string>
     <string name="didn_t_receive_code_resend">Didn\'t Receive Code? <u>Resend.</u></string>
@@ -872,8 +872,13 @@
     <string name="purchase_order_no_items_added">No Items added to the Purchase Order</string>
     <string name="bill_number">Bill #</string>
     <string name="order_number">Order Number</string>
-    <string name="bill_date">Biil Date</string>
+    <string name="bill_date">Bill Date</string>
     <string name="terms">Terms</string>
     <string name="title_activity_crop_roistep1">Step 1</string>
     <string name="paid_through">Paid Through</string>
+    <string name="label_convert_to_bill">Convert to Bill</string>
+    <string name="supplier_not_selected">You must select Supplier Name</string>
+    <string name="preview_bill">Preview Bill</string>
+    <string name="payment_made_not_entered_message">You must enter Payment Made</string>
+    <string name="select_bill">Select Bill</string>
 </resources>
